<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_news"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/News" />
        <item android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/Gallery" />
        <item android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/Contact" />
    </group>

    <item android:title="@string/Students_and_staff">
        <menu>
            <item
                android:id="@+id/action_personal_timetable"
                android:icon="@android:drawable/ic_menu_week"
                android:title="@string/Personal_timetable" />
            <item
                android:id="@+id/action_room_timetable"
                android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/Room_timetable" />
        </menu>
    </item>

    <item android:title="@string/Staff">
        <menu>
            <item
                android:id="@+id/action_attendance"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/Student_attendance" />
        </menu>
    </item>

    <item android:title="@string/App">
        <menu>
            <item
                android:id="@+id/action_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/About" />
        </menu>
    </item>

</menu>