<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference
                android:title="@string/app_name"
                android:icon="@mipmap/ic_launcher"
                android:summary="@string/uclan_cyprus_url">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/uclan_cyprus_url" />
        </Preference>

        <Preference
                android:key="applicationVersion"
                android:title="@string/Version"/>

        <Preference
                android:key="applicationDevelopedBy"
                android:title="@string/DevelopedBy"
            android:icon="@mipmap/inspire"
                android:summary="@string/inspire_url">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/inspire_url" />
        </Preference>

    <Preference
        android:key="share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/Tell_the_world"
        android:summary="@string/Share_with_your_friends"/>

</PreferenceScreen>