<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="5dp"
        card_view:cardBackgroundColor="@color/white"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/activity_about_details"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:padding="8dp"
                    android:gravity="center_horizontal|bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_uclancy_distance_l1"
                        android:text="..."
                        android:textSize="26sp"
                        android:gravity="end|top"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"/>

                    <TextView
                        android:id="@+id/fragment_uclancy_distance_l2"
                        android:text="@string/Km"
                        android:textSize="12sp"
                        android:gravity="top"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_toRightOf="@id/fragment_uclancy_distance_l1"
                        android:layout_toEndOf="@id/fragment_uclancy_distance_l1"
                        android:layout_alignBaseline="@id/fragment_uclancy_distance_l1"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"/>

                    <TextView
                        android:id="@+id/fragment_uclancy_address"
                        android:text="@string/uclancy_address"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/fragment_uclancy_distance_l2"
                        android:layout_toEndOf="@id/fragment_uclancy_distance_l2"
                        android:layout_margin="4dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/fragment_uclancy_address_details"
                        android:text="@string/uclancy_driving_instructions"
                        android:textStyle="italic"
                        android:layout_toRightOf="@id/fragment_uclancy_distance_l2"
                        android:layout_toEndOf="@id/fragment_uclancy_distance_l2"
                        android:layout_below="@id/fragment_uclancy_address"
                        android:layout_margin="4dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/fragment_uclancy_call"
                        android:text="@string/Call"
                        android:drawableLeft="@drawable/ic_call_black_24dp"
                        android:drawableStart="@drawable/ic_call_black_24dp"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/fragment_uclancy_navigate"
                        android:text="@string/Navigate"
                        android:drawableLeft="@drawable/ic_navigation_black_24dp"
                        android:drawableStart="@drawable/ic_navigation_black_24dp"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <fragment
                android:id="@+id/activity_uclancy_map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_alignParentTop="true"
                android:layout_above="@id/activity_about_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>